--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
-  "name": "chart",
-  "version": "0.1.0",
-  "private": true,
+  "name": "suiteshare-chart",
+  "version": "0.0.1",
+  "description": "",
+  "main": "./dist/chart.common.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andrecarello/chart.git"
+  },
+  "author": "andrecarello",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/andrecarello/chart/issues"
+  },
+  "homepage": "https://github.com/andrecarello/chart#readme",
+  "files": ["dist/*", "src/*", "public/*", "*.json", "*.js"],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "build:bundle": "vue-cli-service build --target lib --name chart ./index.js"
   },
   "dependencies": {
+    "apexcharts": "^3.31.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "vue-template-compiler": "^2.6.11"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+  }
 }
